# Unity-Generator

./: .dockerignore  .gitignore  BUILD_STATUS.md  CONTRIBUTING.md  Dockerfile.test-installed  Dockerfile.test-isolated-linux  MIGRATION_COMPLETE.md  README.md  app-icon.icns  copilot-instructions.md  docker-compose.yml  forge.config.js  jsconfig.json  main.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preload.js  pyrightconfig.json  repro_failure.py  skills-lock.json  task-7.3-verification.md  test_new_results.txt  test_new_results_v2.txt  tsconfig.json  typecheck_results_v2.txt  typecheck_results_v3.txt  typecheck_results_v4.txt  vite.main.config.mjs  vite.renderer.config.mjs
agents/: README.md  (+10 more)
backend/: .dockerignore  Dockerfile  mcp_config.json  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements.txt  test_results.txt  test_unity_skills_results.txt  test_unity_skills_results_v2.txt  test_unity_skills_results_v3.txt  unity-generator-backend.spec
backend/app/: __init__.py  agent_manager.py  asset_saver.py  config.py  constants.py  db.py  entrypoint.py  finalize_store.py  kernel.py  logging_config.py  main.py  prompts.py  schemas.py  unity_project.py
backend/tests/: api_keys.http  conftest.py  health_check.py  manual_test_unity_mcp.py  test_agent_manager.py  test_agent_manager_db.py  test_agent_manager_fallback.py  test_audio_validation.py  test_config.py  test_config_keys.py  test_db.py  test_finalize_endpoint.py  test_finalize_providers.py  test_generate_audio.py  test_generate_code.py  test_generate_image.py  test_generate_sprites.py  test_generate_text.py  test_generate_unity_project.py  test_health.py  test_incremental_saving.py  test_kernel.py  test_management_db.py  test_management_discovery.py  test_models.py  test_native_plugins.py  test_output_latest.py  test_prefs.py  test_provider_adapters.py  test_provider_fallback_chain.py  test_provider_orchestrator_plugin.py  test_provider_registry.py  test_provider_select.py  test_providers.py  test_replicate_chat.py  test_scenes_endpoint.py  test_schemas.py  test_sprite_service.py  test_system_prompts.py  test_unity_agent.py  (+11 more)
(+412 files in other folders)
