[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-generator-backend"
version = "0.9.0"
description = "Unity project generation and finalization backend with AI integration"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools]
packages = ["app"]

[tool.ruff]
# Target Python version
target-version = "py310"
line-length = 120

# Files to include/exclude
extend-exclude = ["__pycache__", ".venv"]

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

# Allow fix for all enabled rules (when `--fix`)
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Configure formatter
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "services.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "agents.*"
ignore_missing_imports = false

[tool.pyright]
include = ["."]
extraPaths = [".."]
reportMissingImports = true
reportGeneralTypeIssues = false
pythonVersion = "3.10"
pythonPlatform = "Linux"

[project.optional-dependencies]
dev = [
    "pyfakefs",
    "pytest",
    "pytest-asyncio",
    "anyio",
    "ruff",
    "mypy",
]


